--- a/index.html
+++ b/index.html
@@ -11,20 +11,34 @@
     <!-- inizio header -->
     <header>
         <img src="./img/logo.svg" alt="">
-        <div class="container">
-            <div class="titolone"><h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Bernes-Lee</h1></div>
-            <div class="autore-data">
-                <h2>Scritto da <a href="https://www.google.com" target="_blank" rel="noopener noreferrer">The Booleaner</a></h2>
-                <p>il 10/10/2020</p>
-            </div>
-            <div class="foto-fonti">
-                <img src="./img/tim-1.jpg" alt="">
-                <img src="./img/tim-2.jpg" alt="">
-                <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
-                <p>2nd Photo: Wikimedia, by Paul Clarke</p>
-            </div>
-        </div>
     </header>
-    <!-- fine header -->
+        <!-- fine header -->
+    <main>
+        <!-- inizio prima sezione -->
+        <section>
+                <div class="titolone"><h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Bernes-Lee</h1></div>
+                <div class="autore-data">
+                    <h2>Scritto da <a href="https://www.google.com" target="_blank" rel="noopener noreferrer">The Booleaner</a></h2>
+                    <p>il 10/10/2020</p>
+                </div>
+                <div class="foto-fonti">
+                    <img src="./img/tim-1.jpg" alt="">
+                    <img src="./img/tim-2.jpg" alt="">
+                    <p>1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen</p>
+                    <p>2nd Photo: Wikimedia, by Paul Clarke</p>
+                </div>
+        </section>
+        <!-- fine prima sezione -->
+
+        <!-- inizio seconda sezione -->
+        <section>
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <mark>exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? </mark></p>
+            <ul>
+                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi consequuntur unde harum tempora asperiores sapiente dolore alias magnam odit repellat, facilis blanditiis eum, mollitia</li>
+                <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam similique iste possimus ex maiores expedita blanditiis eum sed tempore veniam,</li>
+                <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </li>
+            </ul>
+        </section>
+    </main>
 </body>
 </html>
