--- a/index.html
+++ b/index.html
@@ -38,6 +38,32 @@
                 <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quam similique iste possimus ex maiores expedita blanditiis eum sed tempore veniam,</li>
                 <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </li>
             </ul>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                        <th>Lorem ipsum dolor</th>
+                    </tr>
+                </thead>
+                    <tbody>
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur repellat reprehenderit minus expedita, at corrupti corporis, aliquid ab ad blanditiis magnam! Blanditiis unde quis ex fugiat nemo quasi placeat ipsam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias placeat harum, saepe animi, dolor perspiciatis voluptatibus eligendi odit corporis, necessitatibus et assumenda eum quas voluptatem ad laudantium iste debitis. Nam!</td>
+                        </tr>
+                        <tr id="riga-bianca">
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur repellat reprehenderit minus expedita, at corrupti corporis, aliquid ab ad blanditiis magnam! Blanditiis unde quis ex fugiat nemo quasi placeat ipsam!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis officia laborum vel explicabo recusandae! Doloribus velit molestias ullam asperiores laboriosam labore temporibus, laborum expedita tempore obcaecati similique enim, quae voluptates.</td>
+                        </tr>
+                        <tr>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor</td>
+                            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur repellat reprehenderit minus expedita, at corrupti corporis, aliquid ab ad blanditiis magnam! Blanditiis unde quis ex fugiat nemo quasi placeat ipsam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam maiores temporibus suscipit at quos! Sed beatae autem ratione velit ex nesciunt, ut in quia. Voluptas quisquam iste nobis voluptatum suscipit!</td>
+                        </tr>
+                    </tbody>
+            </table>
         </section>
     </main>
 </body>
