--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <img src="./img/logo.svg" alt="">
     </header>
         <!-- fine header -->
+
+        <!-- inizio main -->
     <main>
         <!-- inizio prima sezione -->
         <section>
@@ -46,25 +48,42 @@
                         <th>Lorem ipsum dolor</th>
                     </tr>
                 </thead>
-                    <tbody>
-                        <tr>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur repellat reprehenderit minus expedita, at corrupti corporis, aliquid ab ad blanditiis magnam! Blanditiis unde quis ex fugiat nemo quasi placeat ipsam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias placeat harum, saepe animi, dolor perspiciatis voluptatibus eligendi odit corporis, necessitatibus et assumenda eum quas voluptatem ad laudantium iste debitis. Nam!</td>
-                        </tr>
-                        <tr id="riga-bianca">
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur repellat reprehenderit minus expedita, at corrupti corporis, aliquid ab ad blanditiis magnam! Blanditiis unde quis ex fugiat nemo quasi placeat ipsam!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis officia laborum vel explicabo recusandae! Doloribus velit molestias ullam asperiores laboriosam labore temporibus, laborum expedita tempore obcaecati similique enim, quae voluptates.</td>
-                        </tr>
-                        <tr>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem ipsum dolor</td>
-                            <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur repellat reprehenderit minus expedita, at corrupti corporis, aliquid ab ad blanditiis magnam! Blanditiis unde quis ex fugiat nemo quasi placeat ipsam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam maiores temporibus suscipit at quos! Sed beatae autem ratione velit ex nesciunt, ut in quia. Voluptas quisquam iste nobis voluptatum suscipit!</td>
-                        </tr>
-                    </tbody>
+                <tbody>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur repellat reprehenderit minus expedita, at corrupti corporis, aliquid ab ad blanditiis magnam! Blanditiis unde quis ex fugiat nemo quasi placeat ipsam! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias placeat harum, saepe animi, dolor perspiciatis voluptatibus eligendi odit corporis, necessitatibus et assumenda eum quas voluptatem ad laudantium iste debitis. Nam!</td>
+                    </tr>
+                    <tr id="riga-bianca">
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur repellat reprehenderit minus expedita, at corrupti corporis, aliquid ab ad blanditiis magnam! Blanditiis unde quis ex fugiat nemo quasi placeat ipsam!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis officia laborum vel explicabo recusandae! Doloribus velit molestias ullam asperiores laboriosam labore temporibus, laborum expedita tempore obcaecati similique enim, quae voluptates.</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem ipsum dolor</td>
+                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur repellat reprehenderit minus expedita, at corrupti corporis, aliquid ab ad blanditiis magnam! Blanditiis unde quis ex fugiat nemo quasi placeat ipsam! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam maiores temporibus suscipit at quos! Sed beatae autem ratione velit ex nesciunt, ut in quia. Voluptas quisquam iste nobis voluptatum suscipit!</td>
+                    </tr>
+                </tbody>
             </table>
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <mark>exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? </mark></p>
         </section>
+        <!-- fine seconda sezione -->
     </main>
+        <!-- fine main -->
+
+        <!-- inizio footer -->
+    <footer>
+        <div class="scritta-footer">
+            <p>Potrebbero interessarti</p>
+        </div>
+        <div class="monitor">
+            <p>Lorem ipsum dolor</p>
+        </div>
+        <div class="grafico">
+            <p>Lorem ipsum dolor</p>
+        </div>
+    </footer>
+        <!-- fine footer -->
 </body>
 </html>
